# vp8_full_duplex_capn_proto

./: CMakeLists.txt  Serialization.h  chat_client.h  main.cpp  video_call.h
Proto/: Packet.capnp  Packet.capnp.h
Video/: Decoder.h  Encoder.h
client/: CMakeLists.txt  Serialization.h  ThreadSafeDeque.h  chat_client.h  main.cpp  video_call.h
client/Audio/: Audio.h
client/Proto/: Packet.capnp.c++
client/Video/: Decoder.h  Encoder.h
server/: CMakeLists.txt  Serialization.h  main.cpp
